--- a/src/components/company_profile_components/company_profile_menu/company_profile_menu.css
+++ b/src/components/company_profile_components/company_profile_menu/company_profile_menu.css
@@ -2,27 +2,57 @@
 /* menu container */
 .company_profile_menu_container{
     width: 20%;
-    min-width: 330px;
     height: 100vh;
+    min-width: 330px;
+    transition: 0.5s ease all;
+    overflow: hidden;
     position: sticky;
     top: 0px;
-    z-index: 999;
+    left: 0px;
+    z-index: 1000;
+}
+.company_profile_menu{
+    width: 330px;
+    height: 100vh;
     background-color: var(--company-menu_bg-color);
     overflow-y: auto;
     padding: 20px 0px;
+    position: relative;
 }
-.company_profile_menu_container::-webkit-scrollbar{
+.company_profile_menu::-webkit-scrollbar{
     width: 5px;
 }
-.company_profile_menu_container::-webkit-scrollbar-track {
+.company_profile_menu::-webkit-scrollbar-track {
     padding: 5px 0px;
 }
-.company_profile_menu_container::-webkit-scrollbar-thumb{
+.company_profile_menu::-webkit-scrollbar-thumb{
     border-radius: 5px;
     background-color: var(--page-text-slogan-color);
 }
-.company_profile_menu_container::-webkit-scrollbar-thumb:hover{
+.company_profile_menu::-webkit-scrollbar-thumb:hover{
     background-color: var(--light-text-color);
+}
+.company_profile_menu_close_btn{
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
+}
+.company_profile_menu_close_btn svg{
+    font-size: 30px;
+    color: var(--main-text-color);
+}
+.company_profile_menu_open{
+    width: 20%;
+    min-width: 330px;
+    /* position: absolute; */
+    box-shadow: var(--boxes-shadow-light);
+    transition: 0.5s ease all;
+}
+.company_profile_menu_close{
+    width: 0px;
+    min-width: 0px;
+    overflow: hidden;
 }
 /* image and name */
 .company_profile_menu_image_and_name{
@@ -70,4 +100,47 @@
 }
 .company_profile_menu_items_container li{
     width: 100%;
+}
+@media (width <= 1270px){
+    .company_profile_menu_container{
+        width: 0px;
+        min-width: 0px;
+        position: absolute;
+        overflow: hidden;
+    }
+    .company_profile_menu_open{
+        width: 0px;
+        min-width: 0px;
+        /* position: absolute; */
+        box-shadow: var(--boxes-shadow-light);
+        overflow: hidden;
+    }
+    .company_profile_menu_close{
+        width: 20%;
+        min-width: 330px;
+        overflow: hidden;
+    }
+}
+@media (width <= 350px){
+    .company_profile_menu_container{
+        min-width: unset;
+        width: 100%;
+        overflow: hidden;
+    }
+    .company_profile_menu{
+        width: 100%;
+        min-width: 100%;
+    }
+    .company_profile_menu_open{
+        width: 0px;
+        min-width: 0px;
+        /* position: absolute; */
+        box-shadow: var(--boxes-shadow-light);
+        overflow: hidden;
+    }
+    .company_profile_menu_close{
+        width: 100%;
+        min-width: unset;
+        overflow: hidden;
+    }
 }
