company profile menu bug fixed

--- a/src/components/company_profile_components/company_profile_dashboard/company_profile_dashboard.css
+++ b/src/components/company_profile_components/company_profile_dashboard/company_profile_dashboard.css
@@ -134,6 +134,11 @@
     text-align: center;
     font-size: 17px;
 }
+@media (width <= 950px){
+    .company_profile_dashboard_overview{
+        justify-content: unset;
+    }
+}
 @media (width <= 600px){
     .company_profile_dashboard_charts_container{
         padding: 20px 0px 0px;
