--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -33,13 +33,14 @@
     color: white;
     text-transform: uppercase;
     text-align: center;
+    /* margin-bottom: 20px; */
     /* overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis; */
 }
 /* action button */
 .home_slider_slogan_action_btn{
-    margin-top: 100px;
+    /* margin-top: 100px; */
     border: none;
     padding: 10px 30px;
     background-color: var(--primary-color);
@@ -50,6 +51,10 @@
     font-size: 20px;
     transition: 0.1s ease all;
     font-weight: 500;
+    position: absolute;
+    bottom: 50px;
+    /* left: 0px;
+    right: 0px; */
 }
 .home_slider_slogan_action_btn:hover{
     background-color: var(--accent-hover);
@@ -62,22 +67,47 @@
         width: 80%;
         font-size: 30px;
     }
+    .home_slider_slogan_action_btn{
+        bottom: 20px;
+    }
 }
 @media (width <= 822px){
     .home_slider_slogan_text{
         width: 80%;
-        font-size: 30px;
+        /* font-size: 30px; */
+    }
+    .home_slider_slogan_action_btn{
+        font-size: 14px;
     }
 }
-@media (width <= 600px){
+@media (width <= 650px){
+    .home_slider_slogan{
+        justify-content: unset;
+        padding-top: 50px;
+    }
     .home_slider_slogan_text{
-        width: 90%;
-        font-size: 18px;
+        width: 100%;
+        font-size: 17px;
+    }
+}
+@media (width <= 500px){
+    .home_slider_slogan{
+        padding-top: 20px;
+    }
+}
+@media (width <= 400px){
+    .home_slider_slogan{
+        padding-top: 10px;
+    }
+    .home_slider_slogan_action_btn{
+        bottom: 10px;
+        padding: 5px 10px;
+        font-size: 13px;
     }
 }
 @media (width <= 350px){
     .home_slider_slogan_text{
-        width: 90%;
+        width: 100%;
         font-size: 15px;
     }
 }
