--- a/src/components/post_box/post_box.css
+++ b/src/components/post_box/post_box.css
@@ -3,8 +3,8 @@
 .post_box_container{
     width: 100%;
     display: block;
-    border: 1px solid var(--main-border-color);
-    box-shadow: var(--boxes-shadow-dark);
+    border: 1px solid rgb(201, 199, 199);
+    /* box-shadow: var(--boxes-shadow-dark); */
     border-radius: 10px;
     margin-bottom: 20px;
     padding: 15px;
