--- a/src/components/company_profile_components/company_profile_main_window/company_profile_main_window.css
+++ b/src/components/company_profile_components/company_profile_main_window/company_profile_main_window.css
@@ -89,6 +89,7 @@
 .company_profile_nested_windows{
     width: 100%;
     padding: 30px 20px;
+    overflow: hidden;
 }
 @media (width <= 1270px){
     .company_profile_main_window_container{
