--- a/src/pages/post_Detail/post_detail.css
+++ b/src/pages/post_Detail/post_detail.css
@@ -7,6 +7,7 @@
     width: 95%;
     margin: 0px auto;
     padding: 50px 0px;
+    /* position: relative; */
 }
 /* vacancy header */
 .detail_page_job_header{
