--- a/src/components/company_profile_components/com_pro_create_vacancy/com_pro_create_vacancy.css
+++ b/src/components/company_profile_components/com_pro_create_vacancy/com_pro_create_vacancy.css
@@ -229,7 +229,7 @@
     width: 25px;
     height: 25px;
     margin-right: 10px;
-    border: 2px solid #2c2c2c;
+    border: 2px solid var(--form-inputs-border-color);
     border-radius: 3px;
     position: relative;
     cursor: pointer;
