--- a/src/components/spinnerForPageLoading/LoadingSpinner.css
+++ b/src/components/spinnerForPageLoading/LoadingSpinner.css
@@ -1,3 +1,4 @@
+@import '../../color.css';
 /* LoadingSpinner.css */
 
 .loading-spinner-container {
@@ -5,7 +6,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
     height: 100vh;
+    position: relative;
+    background-color: var(--primary-color);
+    top: 0px;
+    left: 0px;
+    right: 0px;
   }
   
   .logo-spin {
