--- a/src/components/company_profile_components/company_profile_dashboard/company_profile_dashboard.css
+++ b/src/components/company_profile_components/company_profile_dashboard/company_profile_dashboard.css
@@ -6,7 +6,7 @@
 /* dashboard overview */
 .company_profile_dashboard_overview{
     width: 100%;
-    max-width: 100%;
+    /* max-width: 100%; */
     display: flex;
     flex-direction: row;
     /* flex-wrap: wrap; */
