--- a/src/components/company_profile_components/com_pro_create_vacancy/custom_select_option_for_creat_vacancy.css
+++ b/src/components/company_profile_components/com_pro_create_vacancy/custom_select_option_for_creat_vacancy.css
@@ -41,9 +41,13 @@
     max-height: 0px;
     overflow-y: auto;    
     transition: max-height 0.5s;
-    margin-top: 5px;
+    /* margin-top: 5px; */
     box-shadow: var(--boxes-shadow-light);
     background-color: var(--primary-color);
+    position: absolute;
+    z-index: 10;
+    top: 40px;
+    left: 0px;
 }
 .custom_options_container_creat_vacancy::-webkit-scrollbar{
     width: 5px;
