--- a/src/components/custom_select_option/custom_select_option.css
+++ b/src/components/custom_select_option/custom_select_option.css
@@ -41,9 +41,13 @@
     max-height: 0px;
     overflow-y: auto;    
     transition: max-height 0.5s;
-    margin-top: 5px;
+    /* margin-top: 5px; */
     box-shadow: var(--boxes-shadow-light);
     background-color: var(--primary-color);
+    position: absolute;
+    z-index: 10;
+    top: 40px;
+    left: 0px;
 }
 .custom_options_container::-webkit-scrollbar{
     width: 5px;
@@ -62,6 +66,11 @@
 .custom_options_show{
     max-height: 300px;
     border: 1px solid var(--main-border-color);
+    /* margin-top: 5px;
+    position: absolute;
+    z-index: 10;
+    top: 0px;
+    left: 0px; */
 }
 /* hiding options of custom select */
 .custom_options_hide{    
