--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -67,6 +67,7 @@
     font-weight: 500;
     font-size: 14px;
     color: var(--main-text-color);
+    padding: 5px;
 }
 .header_links li:hover a{
     color: var(--accent-color);
