--- a/src/components/company_profile_components/com_pro_create_vacancy/com_pro_create_vacancy.css
+++ b/src/components/company_profile_components/com_pro_create_vacancy/com_pro_create_vacancy.css
@@ -320,6 +320,25 @@
 .ql-editor{
     /* height: 100% !important; */
     min-height: 200px;
+    max-height: 500px;
+}
+.ql-editor::-webkit-scrollbar{
+  width: 10px;
+  height: 10px;
+}
+.ql-editor::-webkit-scrollbar-track {
+  padding: 5px 0px;
+  background-color: var(--main-border-color);
+  border-radius: 5px;
+}
+.ql-editor::-webkit-scrollbar-thumb{
+  border-radius: 5px;
+  background-color: var(--page-text-slogan-color);
+  transition: 0.3s ease all;
+  cursor: pointer;
+}
+.ql-editor::-webkit-scrollbar-thumb:hover{
+  background-color: var(--light-text-color);
 }
 .ql-toolbar svg{
     color: var(--light-text-color) !important;
