updated status updating

--- a/src/color.css
+++ b/src/color.css
@@ -25,7 +25,7 @@
     --checkbox-accept-color: #40CB00;
     --light-green-bg-color: #F0FFF6;
     --list-active-bg-color: #F8F8F8;
-    --copyright-box-bg-color: #E7FFE9;
+    --copyright-box-bg-color: #b0f4b6;
     --option-active-bg-color: #F2F4FF;
     --page-head-text: #f6fef6;
     --premium-vacancy-color: #ffd500;
