--- a/src/components/company_profile_components/c_p_applies/c_p_total_applies/c_p_total_applies.css
+++ b/src/components/company_profile_components/c_p_applies/c_p_total_applies/c_p_total_applies.css
@@ -2,7 +2,158 @@
 .c_p_total_applies_cont{
     width: 100%;
 }
-/* CSS for Applies Table */
+/* _________________- search form container _________________________ */
+.c_p_total_applies_Search_form_and_new_cont{
+  width: 80%;
+  max-width: 600px;
+  margin: 10px auto 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+/* search form  */
+.c_p_total_applies_Search_form{
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  border: 1px solid var(--form-inputs-border-color);
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: var(--primary-color);
+}
+/* form input */
+.c_p_total_applies_Search_form_input{
+  width: 90%;
+  border: none;
+  outline: none;
+  padding: 10px;
+  font-size: 16px;
+  background-color: var(--primary-color);
+}
+/* form submit */
+.c_p_total_applies_Search_form_sbmt{
+  width: 37px;
+  height: 30px;
+  background-color: var(--accent-color);
+  position: absolute;
+  z-index: 1;
+  right: 10px;
+  top: 13%;
+  border: none;
+  border-radius: 10px;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s ease all;
+}
+.c_p_total_applies_Search_form_sbmt svg{
+  font-size: 18px;
+  color: var(--primary-color);
+}
+.c_p_total_applies_Search_form_sbmt:hover{
+  background-color: var(--accent-hover);
+}
+/* filter button and link container */
+.c_p_total_applies_Search_form_flt_btn_and_link{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 20px;
+}
+/* filter open button */
+.c_p_total_applies_Search_form_open_filters{
+  background-color: transparent;
+  padding: 9px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  transition: 0.3s ease all;
+  cursor: pointer;
+}
+.c_p_total_applies_Search_form_open_filters svg{
+  font-size: 19px;
+  color: var(--accent-color);
+  transition: 0.3s ease all;
+}
+.c_p_total_applies_Search_form_open_filters:hover{
+  background-color: var(--accent-hover);
+}
+.c_p_total_applies_Search_form_open_filters:hover svg{
+  color: var(--primary-color);
+}
+/* _______________  company page applies filters container __________________ */
+.c_p_total_applies_filters_container{
+  width: 95%;
+  margin: 0px auto;
+  /* height: 0px; */
+  max-height: 0px;
+  overflow: hidden;
+  transition: 0.5s ease all;
+  overflow-y: auto;
+  background-color: var(--primary-color);
+}
+.c_p_total_applies_filters_container::-webkit-scrollbar{
+  width: 10px;
+  height: 10px;
+}
+.c_p_total_applies_filters_container::-webkit-scrollbar-track {
+  padding: 5px 0px;
+  background-color: var(--main-border-color);
+  border-radius: 5px;
+}
+.c_p_total_applies_filters_container::-webkit-scrollbar-thumb{
+  border-radius: 5px;
+  background-color: var(--page-text-slogan-color);
+  transition: 0.3s ease all;
+  cursor: pointer;
+}
+.c_p_total_applies_filters_container::-webkit-scrollbar-thumb:hover{
+  background-color: var(--light-text-color);
+}
+.c_p_total_applies_filters_close{
+  /* height: auto; */
+  max-height: 300px;
+  min-height: 200px;
+  margin: 0px auto 50px;
+  padding: 20px;
+  border: 1px solid var(--main-border-color);
+  border-radius: 10px;
+  box-shadow: var(--boxes-shadow-light);
+}
+/* filters list */
+.c_p_total_applies_filters{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+/* filters list item */
+.c_p_total_applies_filters .c_p_total_applies_filters_list_item{
+  /* width: 25%; */
+  max-width: 250px;
+  min-width: 200px;
+  margin: 0px 10px 15px 0px; 
+}
+/* .c_p_total_applies_filters .c_p_total_applies_filters_list_item:nth-child(11), .c_p_total_applies_filters .c_p_total_applies_filters_list_item:nth-child(12){
+  width: unset;
+  max-width: unset;
+  min-width: unset;
+  margin-right: 20px; 
+} */
+/* __________________ CSS for Applies Table _________________________ */
+/* loading */
+.c_p_total_applies_loading_rotates{
+  width: 100%;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+}
+.c_p_total_applies_loading_rot_icon{
+  font-size: 40px;
+  color: var(--accent-color);
+  animation: loading_rotate 0.7s infinite linear;
+}
 .c_p_applies {
   width: 100%;
   max-width: 1000px;
@@ -175,7 +326,7 @@
 .c_p_total_applies_CV_mod{
   width: 90%;
   max-width: 850px;
-  max-height: 80vh;
+  max-height: 90vh;
   /* margin: 100px auto; */
   background-color: var(--primary-color);
   border-radius: 10px;
@@ -201,7 +352,7 @@
 } 
 /* modal body */
 .c_p_total_applies_CV_mod_body{
-  max-height: 60vh;
+  max-height: 80vh;
   overflow-y: auto;
 }
 .think-button{
