--- a/src/components/custom_select_option/custom_select_option.css
+++ b/src/components/custom_select_option/custom_select_option.css
@@ -46,7 +46,7 @@
     background-color: var(--primary-color);
     position: absolute;
     z-index: 10;
-    top: 40px;
+    top: 110%;
     left: 0px;
 }
 .custom_options_container::-webkit-scrollbar{
