--- a/src/components/company_profile_components/c_p_applies/c_p_total_applies/c_p_total_applies.css
+++ b/src/components/company_profile_components/c_p_applies/c_p_total_applies/c_p_total_applies.css
@@ -227,6 +227,14 @@
     user-select: none;
     letter-spacing: 1px;
 }
+.c_p_applies_table th:first-child{
+  min-width: 100px;
+  max-width: 100px;
+}
+.c_p_applies_table td:first-child{
+  min-width: 100px;
+  max-width: 100px;
+}
 .c_p_applies_table th:last-child{
     min-width: 300px;
 }
