--- a/src/color.css
+++ b/src/color.css
@@ -38,4 +38,5 @@
     --dashboard-icon-bg-color: #E7FFE9;
     --dashboard-overview-increase-color: #40CB00;
     --dashboard-overview-decrease-color: #FF4545;
+    --thinking-color: #bb00ff;
 }
