--- a/src/components/our_works_promotions/our_works_promotions.css
+++ b/src/components/our_works_promotions/our_works_promotions.css
@@ -8,10 +8,10 @@
 .our_works_promotions_container{
     width: 100%;
     margin-bottom: 100px;
-    background-color: var(--primary-color);
-    border: 1px solid var(--main-border-color);
+    /* background-color: var(--primary-color); */
+    /* border: 1px solid var(--main-border-color); */
     padding: 20px;
-    box-shadow: var(--boxes-shadow-light);
+    /* box-shadow: var(--boxes-shadow-light); */
 }
 .home_page_what_do_box_text_and_slider{
     width: 100%;
