--- a/src/components/post_box/post_box.css
+++ b/src/components/post_box/post_box.css
@@ -169,7 +169,7 @@
     justify-content: space-between;
     align-items: last baseline;
     padding: 0px 20px;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 }
 /* post dates and statistics numbers */
 .post_dates_and_statistics_numbers{
@@ -268,6 +268,12 @@
     }
 }
 /* ______________ responsive _______________ */
+@media (width <= 1300px){
+    .post_box_container_half .post_dates_and_details_btn_container{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
 @media (width <= 1100px){
     .post_box_container_half .post_box_job_title_and_salary{
         flex-direction: column;
